fix: overflow x

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section {
 
         .box_comp {
             color: yellow;
-            overflow: scroll;
+            overflow-x: auto;
             margin-top: 1rem;
             display: flex;
             flex-direction: row;
@@ -133,7 +133,7 @@ section {
             flex-direction: row;
             align-items: center;
             gap: 1rem;
-            overflow: scroll;
+            overflow-x: auto;
         }
 
         .list_skill {
@@ -157,7 +157,7 @@ section {
             flex-direction: row;
             align-items: center;
             gap: 1rem;
-            overflow: scroll;
+            overflow-x: auto;
 
         }
 
